<resources>
    <string name="app_name">Assassin</string>
    <string name="create_game">Create Game</string>
    <string name="my_games">My Games</string>
    <string name="join_game">Join Game</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="user_name">User Name:</string>
    <string name="game_title">Game Title</string>
    <string name="email_id">Email ID</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="logInButton">Log In</string>
    <string name="search_by_name_or_email_id">Search by Name or Email ID</string>
    <string name="search">Search</string>
    <string name="search_result">Search Result</string>
    <string name="invited_players">Invited Players</string>
    <string name="add_symbol">Add</string>
    <string name="send">Send</string>
    <string name="send_invites">Send Invites</string>
    <string name="invite_players">Invite Players</string>
    <string name="new_game">New Game</string>
    <string name="start_game">START GAME</string>
    <string name="create">Create</string>
    <string name="public_game">Public Game</string>
    <string name="players">Players</string>
    <string name="remove">Remove</string>
    <string name="new_player">Add Player</string>
    <string name="game_chat">Chat</string>
    <string name="leave">Leave</string>
    <string name="send_invites_and_create_game">Create Game</string>
    <string name="proceed">Proceed</string>
    <string name="players_to_invite">Players To Invite</string>
    <string name="search_results">Search Results</string>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="win">Win:</string>
    <string name="lose">Lose:</string>
    <string name="assassins">Assassins</string>
    <string name="citizens">Citizens</string>
    <string name="game_over">Game Over</string>
    <string name="main_menu">Main Menu</string>
    <string name="replay">Replay</string>
    <string name="title_activity_join_game">Join a Public Game</string>
    <string name="title_activity_my_games">My Games</string>
    <string name="invite_proceed"><![CDATA[Invite & Proceed]]></string>
    <string name="player_info">Info</string>
</resources>
