<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:textColor="@color/white"
            android:textSize="36dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:paddingRight="30dp"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_column="0"/>


        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:paddingRight="16dp"
            android:layout_row="1"
            android:layout_column="0"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winning_team"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:text="@string/lose"
            android:layout_row="2"
            android:layout_column="0"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/losing_team"
            android:layout_row="2"
            android:layout_column="1"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="48dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/replay_button"
            android:text="@string/replay"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/main_menu_button"
            android:text="@string/main_menu"/>

    </LinearLayout>

</LinearLayout>