<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".InvitePlayersActivity">

    <FrameLayout
        android:id="@+id/fragment_search_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_result" />

    <FrameLayout
        android:id="@+id/fragment_search_player_result"
        android:layout_width="match_parent"
        android:layout_height="100dp">

    </FrameLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invited_players" />

    <ScrollView
        android:id="@+id/scrollView_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_invited_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </ScrollView>

    <Button
        android:id="@+id/send_invites_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/send_invites"
        android:layout_marginBottom="1dp"/>
</LinearLayout>

