<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:paddingRight="30dp"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_name_view"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wins"

            android:layout_row="1"
            android:layout_column="0"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_wins_view"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losses"
            android:layout_row="2"
            android:layout_column="0"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num_losses_view"
            android:layout_row="2"
            android:layout_column="1"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>


</LinearLayout>